Se añadieron lo env, un nuevo endpoint de logout y plugins para el otp
